spacing fixes

--- a/src/scss/components/_project-summary.scss
+++ b/src/scss/components/_project-summary.scss
@@ -1,6 +1,7 @@
 .project-summary {
   padding: var(--spacing-large);
   margin-top: var(--spacing-xx-large);
+  margin-top: var(--spacing-x-large);
   // background: var(--color-background);
   background: var(--color-background-breakout);
   // border: 1px solid var(--color-border);
